# CMakeProjects

./: .gitignore  CMakeLists.txt
Arithmetic/: Arithmetic.h  CMakeLists.txt  MyMath.h  sourse.cpp
ArithmeticApp/: CMakeLists.txt  main.cpp
DSU/: DSU.h  sourse.cpp
DSUmain/: CMakeLists.txt  main.cpp
TList/: TList.h  source.cpp
TQueue/: CMakeLists.txt  TQueue.h  source.cpp
TStack/: CMakeLists.txt  TStack.h  source.cpp
gtest/: gtest.h
lib_example/: example.cpp  example.h
main/: CMakeLists.txt  main.cpp
tests/: test_DSU.cpp  test_example_class.cpp  test_tlist.cpp  test_tstack.cpp
